--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,10 +16,65 @@
   margin: 0;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #008ef2; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00dbfb; 
+}
+
 body {
   overflow-x: hidden;
   width: 100%;
+  /* cursor: none; */
+  cursor: url('assets/img/cursor.svg'), auto;
+  
 }
+
+.dark-mode {
+  background-color: #194660;
+  color: white;
+  transition: 300ms ease-in;
+}
+
+.light-mode {
+  transition: 300ms ease-in;
+}
+
+/* .cursor{
+  width: 60px;
+  height: 60px;
+  background-image: url('assets/img/cursor.svg');
+  position: absolute;
+  transition-duration: 200ms;
+  transition-timing-function: ease-out;
+  animation:  cursorAnimation .5s infinite alternate;
+  z-index: 100000;
+  background-repeat: no-repeat;
+  margin-left: 15px;
+}
+
+@keyframes cursorAnimation {
+  from{
+    transform: scale(1);
+  }
+  to{
+    transform: scale(0.7);
+  }
+} */
 
 .home {
   width: 100%;
@@ -61,18 +116,36 @@ body {
 }
 
 .home-text-buttons {
-  display: -webkit-inline-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .home-text > .home-text-buttons > a {
-  width: 50px;
+  width: 130px;
   font-family: "Spartan";
   font-size: 20px;
   padding: 15px 20px;
   border-radius: 5px;
   background-color: #008ef2;
   color: white;
-  margin-right: 10px;
+  margin-right: 20px;
+  transform: scale(1);
+  transition: 300ms ease-in;
+  /* cursor: pointer; */
+  text-decoration: none;
+}
+
+.home-text > .home-text-buttons > a:hover {
+  transform: scale(1.05);
+}
+
+.toogle-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: url('assets/img/cursor2.svg'), pointer;
+
 }
 
 .toogle {
@@ -80,6 +153,7 @@ body {
   height: 29px;
   background: linear-gradient(90deg, #008ef2 0%, #00dbfb 100%);
   border-radius: 50px;
+  margin-right: 10px;
 }
 
 .toogle-circle {
@@ -88,6 +162,13 @@ body {
   background: white;
   border-radius: 50%;
   margin: 3px;
+  transition: 300ms all ease-in;
+}
+
+.toogle-buttons > span {
+  font-family: "Spartan";
+  font-size: 12px;
+  color: #a9a9a9;
 }
 
 .home-image-card {
@@ -233,7 +314,15 @@ body {
   padding: 20px;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: center; 
+  transform: scale(1);
+  transition: 300ms ease-in;
+}
+
+.stacks-cards > .card:hover {
+  transform: scale(1.1);
+  z-index: 10000;
+  border: 1px solid #00dbfb;
 }
 
 .stacks-cards > .card > .card-icon {
@@ -264,6 +353,7 @@ body {
   font-family: "Spartan";
   font-size: 18px;
   font-weight: 800;
+  color: #000;
 }
 
 .stacks-cards > .card > .card-text > p:nth-child(2) {
@@ -318,12 +408,30 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transform: scale(1);
+  transition: 300ms ease-in;
+}
+
+.services-cards > .card::before {
+  content: "";
+  width: 300px;
+  border: 5px solid #00dbfb;
+  position: absolute;
+  box-sizing: border-box;
+  transform: translateY(-145px);
+  border-radius: 10px 10px 0 0;
+}
+
+.services-cards > .card:hover {
+  transform: scale(1.05);
 }
 
 .services-cards > .card > p {
   font-family: "Spartan";
   font-size: 20px;
   margin-top: 20px;
+  text-align: center;
+  color: #000;
 }
 
 .banner-3 {
@@ -371,6 +479,13 @@ body {
   margin-top: 20px;
   border-radius: 5px;
   text-align: center;
+  color: #000;
+  transform: scale(1);
+  transition: 300ms ease-in;
+}
+
+.banner-3 > .banner-container-box > .banner-text > div:hover {
+  transform: scale(1.05);
 }
 
 .projects {
@@ -408,15 +523,25 @@ body {
 }
 
 .projects-cards > .card > .overlay {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
   border-radius: 10px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(0deg, #0c0c0c94, rgba(0, 0, 0, 0) 102.79%);
+  background: linear-gradient(0deg, #3f3f3f, rgba(0, 0, 0, 0.15) );
+  opacity: 0;
+  z-index: -1;
+  transform: scale(0.1);
+  transition: all 400ms ease-in;
+}
+
+.projects-cards > .card:hover > .overlay {
+  transform: scale(1);
+  opacity: 1;
+  z-index: 100;
 }
 
 .projects-cards > .card > .overlay > .card-text {
@@ -424,7 +549,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 130px;
+  padding-top: 100px;
   width: 100%;
 }
 
@@ -470,7 +595,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
+  cursor: url('assets/img/cursor2.svg'), pointer;
   color: white;
   text-decoration: none;
 }
@@ -532,6 +657,14 @@ body {
   margin-top: 20px;
   border-radius: 5px;
   text-align: center;
+  color: #000;
+  text-decoration: none;
+  transform: scale(1);
+  transition: 300ms ease-in;
+}
+
+.banner-4 > .banner-container-box > .banner-text > div:hover {
+  transform: scale(1.05);
 }
 
 .connect {
@@ -575,6 +708,27 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+  cursor: url('assets/img/cursor2.svg'), pointer;
+}
+
+.connect-cards > div > .card {
+  width: 150px;
+  height: 150px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #ffffff;
+  margin: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+  cursor: url('assets/img/cursor2.svg'), pointer;
+  border: 2px solid transparent;
+  transition: 300ms ease-in;
+}
+
+.connect-cards > div > .card:hover {
+  border: 2px solid #00dbfb;
 }
 
 .connect-cards > div > .card > img {
@@ -652,8 +806,8 @@ body {
   line-height: 1.3;
 }
 
-.page-text > a {
-  width: 80px;
+.page-text > div {
+  width: 140px;
   font-family: "Spartan";
   font-size: 20px;
   padding: 15px 20px;
@@ -661,6 +815,14 @@ body {
   background-color: #008ef2;
   color: white;
   margin-right: 10px;
+  text-decoration: none;
+  transform: scale(1);
+  transition: 300ms ease-in;
+  text-align: center;
+}
+
+.page-text > div:hover {
+  transform: scale(1.05);
 }
 
 .footer {
@@ -716,7 +878,7 @@ body {
 
 .footer-nav > .owner > p {
   font-family: "Spartan";
-  font-size: 18px;
+  font-size: 17px;
   color: white;
   font-weight: 800;
 }
@@ -737,7 +899,10 @@ body {
   font-family: "Spartan";
   margin-bottom: 5px;
   text-decoration: none;
-  cursor: pointer;
+  font-size: 17px;
+  cursor: url('assets/img/cursor2.svg'), pointer;
+  text-decoration: none;
+  color: white;
 }
 
 .footer-connect > .connects {
@@ -755,6 +920,7 @@ body {
   height: 25px;
   width: 25px;
   margin: 0 10px;
+  cursor: url('assets/img/cursor2.svg'), pointer;
 }
 
 .footer-connect > .connects > h1,
@@ -783,9 +949,13 @@ body {
 
 .footer-connect > .page > .mypage > p {
   font-family: "Spartan";
-  font-size: 18px;
+  font-size: 17px;
   color: white;
   font-weight: 800;
+}
+
+.mypage{
+  cursor: url('assets/img/cursor2.svg'), pointer;
 }
 
 .copyright-container {
@@ -800,6 +970,94 @@ body {
   font-family: "Spartan";
   font-size: 18px;
   color: white;
+  padding: 15px 0  10px 0;  
+}
+
+.trainings-container{
+  padding: 5rem 5rem 10rem;
+}
+
+.trainings-container > h1 {
+  font-family: "Spartan-Bold";
+  font-size: 50px;
+  text-align: center;
+  padding-bottom: 5rem;
+}
+
+.trainings-cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.trainings-cards > .card {
+  width: 300px;
+  height: 220px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: #ffffff;
+  margin: 15px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 1px 1px 11px rgb(0 0 0 / 15%);
+  cursor: url('assets/img/cursor2.svg'), pointer;
+}
+
+/* .trainings-cards > .card > .overlay {
+  width: 300px;
+  height: 220px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(0deg, #777777, rgba(0, 0, 0, 0.15) );
+  opacity: 0;
+  transform: scale(0.1);
+  transition: 400ms ease-in;
+  z-index: -1;
+}
+
+.trainings-cards > .card:hover > .overlay {
+  transform: scale(1);
+  opacity: 1;
+  z-index: 1;
+}
+
+.trainings-cards > .card > .overlay:hoevr {
+  transform: scale(1);
+  opacity: 1;
+  z-index: 1;
+} */
+
+/* .trainings-cards > .card > .overlay > i {
+  color: rgb(247, 247, 247);
+  font-size: 40px;
+} */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 300ms;
+  z-index: 10000;
+}
+
+.backdrop > img {
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 90px auto;
+  box-shadow: 3px 5px 6px rgb(0 0 0 / 50%);
+  border: 3px solid #fff;
 }
 
 @media screen and (max-width: 1260px) {
@@ -1065,7 +1323,8 @@ body {
 }
 
 @media screen and (max-width: 830px) {
-  .hide-in-tablet-mobile-2 {
+  .hide-in-tablet-mobile-2,
+  .hide-in-tablet-mobile-3 {
     display: none;
   }
   .banner-3 > .banner-container-box > .banner-image {
@@ -1202,5 +1461,162 @@ body {
     height: 200px;
     margin-top: 1rem;
     margin-bottom: 3rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .home-text > h1 {
+    font-size: 35px;
+  }
+  .stacks-container,
+  .services-container,
+  .about-container,
+  .projects-container,
+  .connect-container,
+  .page-container,
+  .trainings-container {
+    padding: 5rem 3rem 5rem;
+  }
+  .about-container > h1,
+  .stacks-container > h1,
+  .services-container > h1,
+  .projects-container > h1,
+  .connect-container > h1,
+  .banner-3 > .banner-container-box > .banner-text > h1,
+  .banner-4 > .banner-container-box > .banner-text > h1,
+  .trainings-container > h1 {
+    font-size: 35px;
+    padding-bottom: 3rem;
+  }
+  .banner-3 > .banner-container-box {
+    height: 150px;
+    padding: 3rem;
+  }
+  .banner-3 > .banner-container-box > .banner-text > h1,
+  .banner-4 > .banner-container-box > .banner-text > h1 {
+    padding-bottom: 0rem;
+  }
+  .about-image-circle {
+    width: 200px;
+    height: 200px;
+  }
+  .about-box > .about-image {
+    margin-bottom: 1.5rem;
+  }
+  .banner-3 > .banner-container-box,
+  .banner-4 > .banner-container-box {
+    padding: 1.5rem;
+  }
+  .connect-cards > div > .card {
+    width: 70px;
+    height: 70px;
+    margin: 20px;
+  }
+  .connect-cards > div > .card > img {
+    width: 50px;
+    height: 50px;
+  }
+  .banner-container {
+    height: 200px;
+    width: 100%;
+  }
+  .connect-container {
+    height: 400px;
+  }
+  .footer-connect > .connects > h1,
+  .footer-connect > .page > h1,
+  .footer-nav > .navs > h1 {
+    font-size: 25px;
+    text-align: center;
+  }
+  .footer-nav > .navs > a {
+    font-size: 12px;
+  }
+  .footer-connect > .connects > .connect-icon > img {
+    height: 15px;
+    width: 15px;
+    margin: 0 10px;
+  }
+  .footer-connect > .page > .mypage > p,
+  .footer-nav > .owner > p {
+    font-size: 12px;
+  }
+  .footer-nav > .owner > .circle-image,
+  .footer-connect > .page > .mypage > .circle-image {
+    width: 25px;
+    height: 25px;
+    margin-right: 5px;
+  }
+  .home-text-buttons {
+    flex-direction: column;
+  }
+  .home-text > .home-text-buttons > a {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .home-text > h1 {
+    font-size: 25px;
+  }
+  .stacks-container,
+  .services-container,
+  .about-container,
+  .projects-container,
+  .connect-container,
+  .page-container,
+  .trainings-container {
+    padding: 3rem 1rem 5rem;
+  }
+  .about-container > h1,
+  .stacks-container > h1,
+  .services-container > h1,
+  .projects-container > h1,
+  .connect-container > h1,
+  .trainings-container > h1 {
+    font-size: 25px;
+    padding-bottom: 2rem;
+  }
+  .about-image-circle {
+    width: 200px;
+    height: 200px;
+  }
+  .about-box > .about-image {
+    margin-bottom: 1.5rem;
+  }
+  .banner-3 > .banner-container-box,
+  .banner-4 > .banner-container-box,
+  .footer-container {
+    padding: 1.5rem;
+  }
+  .connect-cards > div > .card {
+    width: 70px;
+    height: 70px;
+    margin: 15px;
+  }
+  .connect-cards > div > .card > img {
+    width: 50px;
+    height: 50px;
+  }
+ 
+}
+
+@media screen and (max-width: 300px) {
+  .connect-cards > div > .card {
+    width: 70px;
+    height: 70px;
+    margin: 10px;
+  }
+  .connect-cards > div > .card > img {
+    width: 50px;
+    height: 50px;
+  }
+  .stacks-container,
+  .services-container,
+  .about-container,
+  .projects-container,
+  .connect-container,
+  .page-container {
+    padding: 3rem 1rem 3rem;
   }
 }
