--- a/stylesheet.css
+++ b/stylesheet.css
@@ -412,17 +412,8 @@ body {
   transition: 300ms ease-in;
 }
 
-.services-cards > .card::before {
-  content: "";
-  width: 300px;
-  border: 5px solid #00dbfb;
-  position: absolute;
-  box-sizing: border-box;
-  transform: translateY(-145px);
-  border-radius: 10px 10px 0 0;
-}
-
 .services-cards > .card:hover {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
   transform: scale(1.05);
 }
 
@@ -993,7 +984,7 @@ body {
 
 .trainings-cards > .card {
   width: 300px;
-  height: 220px;
+  height: 200px;
   box-sizing: border-box;
   border-radius: 10px;
   background: #ffffff;
@@ -1086,6 +1077,9 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 50px;
+  }
+  .home-text > h1{
+    text-align: center;
   }
   .home-text > p {
     text-align: center;
@@ -1555,7 +1549,7 @@ body {
   }
 }
 
-@media screen and (max-width: 330px) {
+@media screen and (max-width: 360px) {
   .home-text > h1 {
     font-size: 25px;
   }
